# otcommon

./: .gitignore  CMakeLists.txt  README.md  otcommonConfig.cmake.in
format/: clang-format
modules/: otcommon-apply-defines.cmake  otcommon-configure-target-c.cmake  otcommon-configure-target-cxx.cmake  otcommon-configure-target-external.cmake  otcommon-configure-target.cmake  otcommon-define-job-pools.cmake  otcommon-define-signed-overflow.cmake  otcommon-detect-compiler.cmake  otcommon-detect-msvc-standard-library-from-vcpkg-triplet.cmake  otcommon-file-to-hex.cmake  otcommon-find-system-libraries.cmake  otcommon-generate-cmake-files.cmake  otcommon-hide-symbols.cmake  otcommon-make-iwyu-target.cmake  otcommon-modules.cmake  otcommon-pch-pic-workaround.cmake  otcommon-print-build-details.cmake  otcommon-print-target-compiler-flags.cmake  otcommon-require-out-of-source-build.cmake  otcommon-set-build-type.cmake  otcommon-set-osx-deployment-target.cmake  otcommon-set-project-language-standard.cmake  otcommon-set-rpath.cmake  otcommon-set-version-from-git.cmake  otcommon-target-embed-directory.cmake  otcommon-update-submodules.cmake  otcommon-version-from-git.cmake
